# talk-notes-generator

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: main.rs  template.html
test/: 2022-08-30-JGI.md
