[package]
name = "talk-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.1"
clap = { version = "3.2.20", features = ["derive"] }
color-eyre = "0.6.2"
graphicsmagick = "0.4.0"
once_cell = "1.14.0"
pulldown-cmark = "0.9.2"
serde = { version = "1.0.144", features = ["derive"] }
tera = "1.17.0"
yaml-front-matter = "0.1.0"
